fixing files structure

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  background: #000;
+}
+
 .arrow {
     transition: opacity 0.3s ease-in-out;
   }
@@ -20,3 +24,5 @@
       }
     }
   }
+
+  
